--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -75,7 +75,7 @@
 }
 
 .sidebar .brand {
-    padding: 1rem;5rem;
+    padding: 1rem;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     text-align: center;
 }
