--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -13,7 +13,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="" class="nav-link">
+                <a href="/customer-manager/customerlist.html" class="nav-link">
                     <i class="fas fa-users"></i>
                     <span>Quản lý khách hàng</span>
                 </a>
