--- a/chef/css/style.css
+++ b/chef/css/style.css
@@ -253,7 +253,7 @@ body {
 
 .orders-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(4, minmax(250px, 1fr));
     gap: 10px; /* Giảm xuống 1rem để gần nhau hơn */
     margin-top: 1rem;
     padding: 0 1rem;
