sua intastdate trong lich lam , tinh doanh thu bang payment

--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -42,6 +42,12 @@
                     <span>Đơn hàng</span>
                 </a>
             </li>
+              <li class="nav-item">
+                <a href="/revenue-report/transaction.html" class="nav-link">
+                    	<i class="fas fa-exchange-alt"></i>
+                    <span>Giao dịch</span>
+                </a>
+            </li>
             <li class="nav-item">
                 <a href="/schedule/lichlam.html" class="nav-link" >
                     <i class="fas fa-calendar-alt"></i>
